# iSearch

./: .env  Cargo.toml  README.md  diesel.toml  saved.txt
cleaned/: wiki_Analog_computer.txt  wiki_Analogue_electronics.txt  wiki_Ancient_Greece.txt  wiki_Antikythera_mechanism.txt  wiki_Antikythera_wreck.txt  wiki_Babylonia.txt  wiki_Central_processing_unit.txt  wiki_Computation.txt  wiki_Computer.txt  wiki_Computer_cluster.txt  wiki_Computer_hardware.txt  wiki_Computer_monitor.txt  wiki_Computer_mouse.txt  wiki_Computer_network.txt  wiki_Computer_program.txt  wiki_Computer_programming.txt  wiki_Counting_house.txt  wiki_Counting_rods.txt  wiki_Crete.txt  wiki_Derek_J._de_Solla_Price.txt  wiki_Desktop_computer.txt  wiki_Digital_Revolution.txt  wiki_Digital_data.txt  wiki_Digital_electronic.txt  wiki_Execution_(computing).txt  wiki_Fertile_Crescent.txt  wiki_Finger_counting.txt  wiki_GameCube.txt  wiki_History_of_computing.txt  wiki_History_of_computing_hardware.txt  wiki_Human_computer.txt  wiki_Industrial_Revolution.txt  wiki_Industrial_robot.txt  wiki_Input_and_output_devices.txt  wiki_Internet.txt  wiki_Ishango_bone.txt  wiki_Joysticks.txt  wiki_Keyboard_technology.txt  wiki_Kythera.txt  wiki_LYF.txt  (+27 more)
data/: ishansearch.db
pages/: wiki_Abacus.html  wiki_Analog_computer.html  wiki_Analog_computing.html  wiki_Analogue_electronics.html  wiki_Ancient_Greece.html  wiki_Antikythera.html  wiki_Antikythera_mechanism.html  wiki_Antikythera_wreck.html  wiki_Arithmetic.html  wiki_Babylonia.html  wiki_Bone_tool.html  wiki_Calculations.html  wiki_Central_processing_unit.html  (+87 more)
(+170 files in other folders)
