[package]
name = "ishansearch"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web crawling
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
scraper = "0.13"
url = "2"

# Web UI
rocket = { version = "0.5.1", features = ["json", "secrets", "tls"] }
rocket_dyn_templates = { version = "0.1", features = ["tera"] }

# SQLite
diesel = { version = "2.1.0", features = ["sqlite", "r2d2", "chrono"] }
dotenvy = "0.15.7"